# nosh

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: Dockerfile  RESULTS.md  quick-benchmark.sh  run-benchmark.sh  time-to-prompt.py
docs/: completions.md  config.md  packages.md  plugins.md  themes.md
docs/plans/: 2026-02-06-ai-context-and-agentic-mode.md  2026-02-06-nosh-design.md  2026-02-06-nosh-implementation.md  2026-02-07-pricing-and-legal-design.md
nosh-context/: Cargo.toml
nosh-context/src/: cache.rs  context.rs  lib.rs  scanner.rs
nosh-context/src/detectors/: bun.rs  cpp.rs  docker.rs  git.rs  go.rs  mod.rs  node.rs  package.rs  python.rs  rust.rs
scripts/: build-release.sh
src/: history.rs  main.rs  onboarding.rs  paths.rs
src/ai/: agentic.rs  cloud.rs  context.rs  mod.rs  ollama.rs
src/auth/: credentials.rs
src/completions/: builtins.rs  manager.rs  mod.rs  zsh_convert.rs
src/completions/data/: cargo.toml  docker.toml  git.toml  npm.toml
src/config/: mod.rs  schema.rs
src/exec/: env.rs  mod.rs  runner.rs  shell.rs  terminal.rs
src/plugins/: builtins.rs  loader.rs  mod.rs  theme.rs
src/plugins/data/: context.toml  default_theme.toml  exec_time.toml  git.toml  init.sh
src/repl/: helper.rs  mod.rs  readline.rs  sqlite_history.rs  words.rs
src/safety/: mod.rs  parser.rs  permissions.rs  prompt.rs
src/ui/: mod.rs  output_box.rs  spinner.rs  theme.rs
