[package]
name = "nosh"
version = "0.1.0"
edition = "2024"
description = "Natural language shell powered by AI"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustyline = "15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
open = "5"
anyhow = "1"
dirs = "6"
shell-words = "1"
toml = "0.8"
brush-core = "0.4.0"
brush-builtins = "0.1.0"
