[workspace]
members = [".", "nosh-context"]

[package]
name = "nosh"
version = "1.4.1"
edition = "2024"
description = "Natural language shell powered by AI"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustyline = "15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
open = "5"
anyhow = "1"
dirs = "6"
shell-words = "1"
toml = "0.8"
brush-core = "0.4.0"
brush-builtins = "0.1.0"
hostname = "0.4"
regex = "1"
nosh-context = { path = "nosh-context" }
rusqlite = { version = "0.31", features = ["bundled"] }
termimad = "0.30"
nix = { version = "0.29", features = ["signal", "term", "process"] }
libc = "0.2"
