[package]
name = "nosh-context"
version = "0.1.0"
edition = "2024"
description = "Efficient project context detection for nosh"

[lib]
name = "nosh_context"
path = "src/lib.rs"

[[bin]]
name = "nosh-context"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
toml = "0.8"
